// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.c22 {
  display: table;
  width: 100%;
}

.c21 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c21.uc-fe-input-block {
  display: block;
}

.c21 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c21 input,
.c21 input:hover,
.c21 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c21:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c21 input {
  line-height: 26px;
  height: 26px;
}

.c21 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bZQynM {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bZQynM:last-child {
  margin-right: 0;
}

.c7 .c24 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c24:last-child {
  margin-right: 0;
}

.c7 .c25+.c25 {
  margin-left: -1px;
}

.c7 .c23 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c23:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c23:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        prefix
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        suffix
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        block
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c21"
    >
      <span
        class="c22"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.c7 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-left: 8px;
}

.c6 {
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.c8.uc-fe-input-block {
  display: block;
}

.c8,
.c8 input,
.c8 .style__SearchIcon-sc-11j0fsv-1 {
  cursor: not-allowed;
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8,
.c8:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.c8 .c5,
.c8 .c2 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          search
        </span>
        <input
          value="default value"
        />
        <span
          class="c5 c6 c4"
        >
          <i
            class="uc-fe-icon icon__search c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
      disabled=""
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          search
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="c5 c6 c4"
        >
          <i
            class="uc-fe-icon icon__search c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
      disabled=""
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c7"
          />
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="c5 c6 c4"
        >
          search
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 .c2,
.c6 .sc-bdVaJa {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__circle-fill c5"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__circle c5"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__loading c5"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-prefix 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-left: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 .c7,
.c6 .c2 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5"
          />
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      style="width:300px"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      style="width:300px"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3 c4"
        >
          <div
            style="width:50px"
          >
            prefix
          </div>
        </span>
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.c1 {
  display: table;
  width: 100%;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2.uc-fe-input-block {
  display: block;
}

.c2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c2 input,
.c2 input:hover,
.c2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c2 input {
  line-height: 26px;
  height: 26px;
}

.c2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 22px;
  height: 22px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c3.uc-fe-input-block {
  display: block;
}

.c3 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c3 input,
.c3 input:hover,
.c3 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c3:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c3 input {
  line-height: 30px;
  height: 30px;
}

.c3 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c3"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-status 1`] = `
.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2.uc-fe-input-block {
  display: block;
}

.c2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c2 input,
.c2 input:hover,
.c2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c2 input {
  line-height: 26px;
  height: 26px;
}

.c2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2.c2.c2 {
  border-color: #f44336;
  background: #fff0f0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-suffix 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 .c2,
.c6 .sc-bdVaJa {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          suffix
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.c28 {
  vertical-align: baseline;
}

.c25 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c24 {
  padding-right: 8px;
}

.c27 {
  cursor: pointer;
}

.c22 {
  display: table;
  width: 100%;
}

.c21 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c21.uc-fe-input-block {
  display: block;
}

.c21 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c21 input,
.c21 input:hover,
.c21 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c21:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c21 input {
  line-height: 26px;
  height: 26px;
}

.c21 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c29,
.c29 input,
.c29 .c26 {
  cursor: not-allowed;
}

.c29 .c23,
.c29 .sc-bdVaJa {
  color: inherit;
}

.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bZQynM {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bZQynM:last-child {
  margin-right: 0;
}

.c7 .c31 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c31:last-child {
  margin-right: 0;
}

.c7 .c32+.c32 {
  margin-left: -1px;
}

.c7 .c30 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c30:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c30:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c21"
    >
      <span
        class="c22"
      >
        <input />
        <span
          class="c23 c24 c25"
        >
          <i
            class="uc-fe-icon icon__search c26 c27 c28"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.c7 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c6 {
  cursor: pointer;
}

.c1 {
  display: table;
  width: 100%;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8.uc-fe-input-block {
  display: block;
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.c0.uc-fe-input-block {
  display: block;
}

.c0,
.c0 input,
.c0 .c5 {
  cursor: not-allowed;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0,
.c0:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.c0 .c2,
.c0 .sc-bdVaJa {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <span
        class="c1"
      >
        <input
          disabled=""
        />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.c7 {
  vertical-align: baseline;
}

.c4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c3 {
  padding-right: 8px;
}

.c6 {
  cursor: pointer;
}

.c1 {
  display: table;
  width: 100%;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8.uc-fe-input-block {
  display: block;
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c10,
.c10 input,
.c10 .c5 {
  cursor: not-allowed;
}

.c10 .c2,
.c10 .sc-bdVaJa {
  color: inherit;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0.uc-fe-input-block {
  display: block;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c0 input {
  line-height: 22px;
  height: 22px;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c9.uc-fe-input-block {
  display: block;
}

.c9 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c9 input,
.c9 input:hover,
.c9 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c9:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c9 input {
  line-height: 30px;
  height: 30px;
}

.c9 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c9"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3 c4"
        >
          <i
            class="uc-fe-icon icon__search c5 c6 c7"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;
